<!--
  ~ JBoss, Home of Professional Open Source
  ~ Copyright 2011 Red Hat Inc. and/or its affiliates and other
  ~ contributors as indicated by the @author tags. All rights reserved.
  ~ See the copyright.txt in the distribution for a full listing of
  ~ individual contributors.
  ~
  ~ This is free software; you can redistribute it and/or modify it
  ~ under the terms of the GNU Lesser General Public License as
  ~ published by the Free Software Foundation; either version 2.1 of
  ~ the License, or (at your option) any later version.
  ~
  ~ This software is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  ~ Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public
  ~ License along with this software; if not, write to the Free
  ~ Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
  ~ 02110-1301 USA, or see the FSF site: http://www.fsf.org.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.infinispan.quickstart</groupId>
   <artifactId>jboss-as7-quickstart</artifactId>
   <version>5.0.0-SNAPSHOT</version>
   <packaging>war</packaging>

   <name>Infinispan JBoss AS 7 Quickstart</name>
   <description>This quickstart demonstrates how create a simple, clustered, cache on JBoss AS 7.</description>

   <url>http://jboss.org/infinispan</url>
   <licenses>
      <license>
         <name>GNU Lesser General Public License</name>
         <url>http://www.gnu.org/copyleft/lesser.html</url>
         <distribution>repo</distribution>
      </license>
   </licenses>

   <properties>
      <!-- Explicitly declaring the source encoding eliminates the following 
         message: -->
      <!-- [WARNING] Using platform encoding (UTF-8 actually) to copy filtered 
         resources, i.e. build is platform dependent! -->
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

      <version.jboss.javaee.web>2.0.0.Final</version.jboss.javaee.web>
      <infinispan.version>6.0.2.Final</infinispan.version>
   </properties>
   
   <dependencyManagement>
      <dependencies>
         <!-- Define the version of JBoss' Java EE 6 APIs we want to use -->
         <!-- JBoss distributes a complete set of Java EE 6 APIs including 
            a Bill of Materials (BOM). A BOM specifies the versions of a "stack" (or 
            a collection) of artifacts. We use this here so that we always get the correct 
            versions of artifacts. Here we use the jboss-javaee-web-6.0 stack (you can 
            read this as the JBoss stack of the Java EE 6 Web Profile APIs), and we use 
            version 2.0.0.Final which is the latest release of the stack. You can actually 
            use this stack with any version of JBoss AS that implements Java EE 6, not 
            just JBoss AS 7! -->
         <dependency>
            <groupId>org.jboss.spec</groupId>
            <artifactId>jboss-javaee-web-6.0</artifactId>
            <version>${version.jboss.javaee.web}</version>
            <type>pom</type>
            <scope>import</scope>
         </dependency>
      </dependencies>
   </dependencyManagement>

   <dependencies>

      <dependency>
         <groupId>org.infinispan</groupId>
         <artifactId>infinispan-core</artifactId>
         <version>${infinispan.version}</version>
         <scope>provided</scope>
      </dependency>
      
      <!-- Infinispan dependency -->
      <dependency>
         <groupId>org.infinispan</groupId>
         <artifactId>infinispan-cdi</artifactId>
         <version>${infinispan.version}</version>
      </dependency>
      
      <!-- Import the CDI API, we use provided scope as the API is included 
         in JBoss AS 7 -->
      <dependency>
         <groupId>javax.enterprise</groupId>
         <artifactId>cdi-api</artifactId>
         <scope>provided</scope>
      </dependency>

      <!-- Import the Common Annotations API (JSR-250), we use provided scope 
         as the API is included in JBoss AS 7 -->
      <dependency>
         <groupId>org.jboss.spec.javax.annotation</groupId>
         <artifactId>jboss-annotations-api_1.1_spec</artifactId>
         <scope>provided</scope>
      </dependency>

      <!-- Import the Servlet API, we use provided scope as the API is included 
         in JBoss AS 7 -->
      <dependency>
         <groupId>org.jboss.spec.javax.servlet</groupId>
         <artifactId>jboss-servlet-api_3.0_spec</artifactId>
         <scope>provided</scope>
      </dependency>
      
      <dependency>
         <groupId>org.jboss.spec.javax.ejb</groupId>
         <artifactId>jboss-ejb-api_3.1_spec</artifactId>
         <scope>provided</scope>
      </dependency>

   </dependencies>

   <build>
      <!-- Set the name of the war, used as the context root when the app 
         is deployed -->
      <finalName>infinispan-jboss-as7</finalName>
      <plugins>
         <plugin>
            <artifactId>maven-war-plugin</artifactId>
            <version>2.1.1</version>
            <configuration>
               <!-- Java EE 6 doesn't require web.xml, Maven needs to catch 
                  up! -->
               <failOnMissingWebXml>false</failOnMissingWebXml>
               <archive>
                  <manifestEntries>
                     <Dependencies>org.infinispan export</Dependencies>
                  </manifestEntries>
               </archive>
            </configuration>
         </plugin>

         <!-- JBoss AS plugin to deploy war -->
         <plugin>
            <groupId>org.jboss.as.plugins</groupId>
            <artifactId>jboss-as-maven-plugin</artifactId>
            <version>7.1.1.Final</version>
         </plugin>

         <!-- Compiler plugin enforces Java 1.6 compatibility and activates
            annotation processors -->
         <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>2.3.2</version>
            <configuration>
               <source>1.6</source>
               <target>1.6</target>
            </configuration>
         </plugin>
      </plugins>
   </build>

   <profiles>
      <profile>
         <id>jboss-public-repository</id>
         <activation>
            <property>
               <name>jboss-public-repository</name>
               <value>!false</value>
            </property>
         </activation>
         <repositories>
            <repository>
               <id>jboss-public-repository-group</id>
               <name>JBoss Public Maven Repository Group</name>
               <url>http://repository.jboss.org/nexus/content/groups/public</url>
               <releases>
                  <enabled>true</enabled>
                  <updatePolicy>never</updatePolicy>
               </releases>
               <snapshots>
                  <enabled>true</enabled>
                  <updatePolicy>never</updatePolicy>
               </snapshots>
            </repository>
         </repositories>
         <pluginRepositories>
            <pluginRepository>
               <id>jboss-public-repository-group</id>
               <name>JBoss Public Maven Repository Group</name>
               <url>http://repository.jboss.org/nexus/content/groups/public</url>
               <releases>
                  <enabled>true</enabled>
                  <updatePolicy>never</updatePolicy>
               </releases>
               <snapshots>
                  <enabled>false</enabled>
                  <updatePolicy>never</updatePolicy>
               </snapshots>
            </pluginRepository>
         </pluginRepositories>
      </profile>

      <!-- This optional profile fixes the compilation error encountered with 'javax.annotation'
         and Java 6. Java 6 embeds an older version of 'javax.annotation' that the one defined by
         Java EE 6 (e.g. @Resource has no lookup attribute) -->
      <profile>
         <id>jdk6</id>
         <activation>
            <jdk>1.6</jdk>
         </activation>
         <build>
            <plugins>
               <!-- Here we copy the lib which has to be included in the compilation -->
               <!-- This lib contains the new 'javax.annotation' package version -->
               <plugin>
                  <artifactId>maven-dependency-plugin</artifactId>
                  <executions>
                     <execution>
                        <id>copy-endorsed-lib</id>
                        <phase>generate-sources</phase>
                        <goals>
                           <goal>copy</goal>
                        </goals>
                     </execution>
                  </executions>
                  <configuration>
                     <outputDirectory>${project.build.directory}/endorsed</outputDirectory>
                     <artifactItems>
                        <artifactItem>
                           <groupId>org.jboss.spec.javax.annotation</groupId>
                           <artifactId>jboss-annotations-api_1.1_spec</artifactId>
                        </artifactItem>
                     </artifactItems>
                  </configuration>
               </plugin>

               <!-- Here we specify the directory containing the endorsed lib -->
               <plugin>
                  <artifactId>maven-compiler-plugin</artifactId>
                  <version>2.3.2</version>
                  <configuration>
                     <compilerArgument>-Djava.endorsed.dirs=${project.build.directory}/endorsed</compilerArgument>
                  </configuration>
               </plugin>
            </plugins>
         </build>
      </profile>
      <profile>
         <id>standalone-local</id>
         <build>
            <plugins>
               <!-- JBoss AS plugin to deploy war -->
               <plugin>
                  <groupId>org.jboss.as.plugins</groupId>
                  <artifactId>jboss-as-maven-plugin</artifactId>
                  <configuration>
                     <address>subsystem=infinispan,cache-container=jboss-as7-quickstart</address>
                     <properties>
                        <default-cache>jboss-as7-quickstart-cache</default-cache>
                        <cache>!![{"mode" => "LOCAL", "name" => "jboss-as7-quickstart-cache"}]</cache>
                     </properties>
                  </configuration>
               </plugin>
            </plugins>
         </build>
      </profile>
      <profile>
         <id>domain-distributed</id>
         <build>
            <plugins>
               <!-- JBoss AS plugin to deploy war -->
               <plugin>
                  <groupId>org.jboss.as.plugins</groupId>
                  <artifactId>jboss-as-maven-plugin</artifactId>
                  <configuration>
                     <address>subsystem=infinispan,cache-container=jboss-as7-quickstart</address>
                     <properties>
                        <default-cache>jboss-as7-quickstart-cache</default-cache>
                        <cache>!![{"mode" => "DISTRIBUTED", "name" => "jboss-as7-quickstart-cache", "start" => "EAGER", "mode" => "SYNC", "owners" => "1"}]</cache>
                     </properties>
                  </configuration>
               </plugin>
            </plugins>
         </build>
      </profile>
   </profiles>

</project>
